--- a/Conferences.Api/Conferences.Api/appsettings.json
+++ b/Conferences.Api/Conferences.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-VMLTKJ8\\SQLEXPRESS;Database=Conference;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
